# EBA-aula01-EstatisticaDescritiva-poetry

./: README.md  pyproject.toml
notebooks/: estatística_descritiva_house_pricing.ipynb
