[tool.poetry]
name = "aula01-poetry"
version = "0.1.0"
description = ""
authors = ["VanGaigher <vanessa.mat.sedu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
